--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="crypto.tracer.app">
+    package="com.followyourcoins.app">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="crypto.tracer.app.BaseApplication"
+        android:name="com.followyourcoins.app.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,7 +14,7 @@
         android:usesCleartextTraffic="true">
 
         <activity
-            android:name="crypto.tracer.app.SplashActivity"
+            android:name="com.followyourcoins.app.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,22 +23,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="crypto.tracer.app.home.HomeActivity"
+            android:name="com.followyourcoins.app.home.HomeActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="crypto.tracer.app.CubicLineChartActivity"
+            android:name="com.followyourcoins.app.CubicLineChartActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="crypto.tracer.app.BaseActivity"
+            android:name="com.followyourcoins.app.BaseActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="crypto.tracer.app.search.SearchCoinsActivity"
+            android:name="com.followyourcoins.app.search.SearchCoinsActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"></activity>
         <activity
-            android:name="crypto.tracer.app.CoinDetailsActivity"
+            android:name="com.followyourcoins.app.CoinDetailsActivity"
             android:screenOrientation="portrait"></activity>
-        <activity android:name="crypto.tracer.app.about.AboutMeActivity"
+        <activity android:name="com.followyourcoins.app.about.AboutMeActivity"
             android:screenOrientation="portrait"></activity>
     </application>
 
